# contracts/requests/answer_request.go
@@ -1,9 +1,21 @@
 package requests
 
 type AnswerInsertRequest struct {
-	Content string `schema:"content"`
+	Content string `json:"content"`
+}
+
+// swagger:parameters answerInsert
+type AnswerInsertRequestWrapper struct {
+	// in: body
+	Body AnswerInsertRequest
 }
 
 type AnswerUpdateRequest struct {
-	Content string `schema:"content"`
+	Content string `json:"content"`
+}
+
+// swagger:parameters answerUpdate
+type AnswerUpdateRequestWrapper struct {
+	// in: body
+	Body AnswerUpdateRequest
 }
