# contracts/requests/question_request.go
@@ -1,9 +1,16 @@
 package requests
 
+// swagger:parameters questionSearch
 type QuestionSearchRequest struct {
 	*PaginationQuery
 }
 
 type QuestionInsertRequest struct {
-	Content string `schema:"content"`
+	Content string `json:"content"`
+}
+
+// swagger:parameters questionInsert
+type QuestionInsertRequestWrapper struct {
+	// in: body
+	Body QuestionInsertRequest
 }
